--- a/rock-paper-scissors.css
+++ b/rock-paper-scissors.css
@@ -4,17 +4,44 @@ h1{
 	font-family: "Century Gothic"
 }
 
+body{
+	/* background-image: url("background.gif"); */
+	background-color: black;
+}
+
+.bodyPage{
+	justify-content: center;
+	text-align: center;
+}
+
 .rock{
 	margin: center;
 	display: block;
 	padding: 5px;
 }
 
-.button{
-	display: inline-block;
-	font-size: 16px;
+.buttons{
+	/* visibility: hidden; */
+	background-color: #8A2BE2;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
 }
 
 .images{
+	/*visibility: hidden; */
 	margin: auto;
+	justify-content: center;
+	background-color: white;
+	max-width: 800px;
+	max-height: 300px;
+}
+
+.playGame{
 }
